<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Devices" Id="{b5393e15-89a3-428e-a5f3-f52f4df95fb9}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
    (*Rack Mounted Turbo Pumps*)
    {attribute 'TcLinkTo' := 	'.i_xFaultNC		:=	TIIB[MRCO_PLC_E06_EL1004]^Channel 1^Input;
                                 .i_xAtSpd  		:=	TIIB[MRCO_PLC_E06_EL1004]^Channel 2^Input;
                                 .q_RunDO			:=	TIIB[MRCO_PLC_E07_EL2794]^Channel 1^Output
    '}
    {attribute 'pytmc' := '
        pv: MRCO:MAIN:PTM:01
        io: io
    '}
    MRCO_MAIN_PTM_01 : FB_PTM_TurboDrive;

    {attribute 'TcLinkTo' := 	'.i_xFaultNC		:=	TIIB[MRCO_PLC_E06_EL1004]^Channel 3^Input;
                                 .i_xAtSpd  		:=	TIIB[MRCO_PLC_E06_EL1004]^Channel 4^Input;
                                 .q_RunDO			:=	TIIB[MRCO_PLC_E07_EL2794]^Channel 3^Output
    '}
    {attribute 'pytmc' := '
        pv: MRCO:MAIN:PTM:02
        io: io
    '}
    MRCO_MAIN_PTM_02 : FB_PTM_TurboDrive;

    {attribute 'TcLinkTo' := 	'.i_xFaultNC		:=	TIIB[MRCO_PLC_E08_EL1004]^Channel 1^Input;
                                 .i_xAtSpd  		:=	TIIB[MRCO_PLC_E08_EL1004]^Channel 2^Input;
                                 .q_RunDO			:=	TIIB[MRCO_PLC_E07_EL2794]^Channel 2^Output
    '}
    {attribute 'pytmc' := '
        pv: MRCO:MAIN:PTM:03
        io: io
    '}
    MRCO_MAIN_PTM_03 : FB_PTM_TurboDrive;

    {attribute 'TcLinkTo' := 	'.i_xFaultNC		:=	TIIB[MRCO_PLC_E08_EL1004]^Channel 3^Input;
                                 .i_xAtSpd     		:=	TIIB[MRCO_PLC_E08_EL1004]^Channel 4^Input;
                                 .q_RunDO			:=	TIIB[MRCO_PLC_E07_EL2794]^Channel 4^Output
    '}
    {attribute 'pytmc' := '
        pv: MRCO:MAIN:PTM:04
        io: io
    '}
    MRCO_MAIN_PTM_04 : FB_PTM_TurboDrive;

    (*Onboard Turbo Pumps*)

    {attribute 'TcLinkTo' := 	'.q_xReset 			:=	TIIB[MRCO_PNL1_EP02_EP2624-0002]^Channel 2^Output;
                                 .q_RunDO  			:=	TIIB[MRCO_PNL1_EP02_EP2624-0002]^Channel 1^Output;
                                 .i_xAtSpd			:=	TIIB[MRCO_PNL1_EP01_EP2338-0002]^Channel 1^Input;
                                 .i_xFaultNC		:=	TIIB[MRCO_PNL1_EP01_EP2338-0002]^Channel 2^Input
    '}
    {attribute 'pytmc' := '
        pv: MRCO:ROUGH:PTM:01
        io: io
    '}
    MRCO_ROUGH_PTM_01 : FB_PTM_Pfeiffer;
//adding Lybold Turbovac pump MRCO-SS-PTM-01
   {attribute 'TcLinkTo' := 	'.i_xFaultNC		:=	TIIB[MRCO_PLC_E08_EL1004]^Channel 3^Input;
                                 .i_xAtSpd     		:=	TIIB[MRCO_PLC_E08_EL1004]^Channel 4^Input;
                                 .q_RunDO			:=	TIIB[MRCO_PLC_E07_EL2794]^Channel 4^Output
    '}
    {attribute 'pytmc' := '
        pv: MRCO:SS:PTM:01
        io: io
    '}	

//   MRCO_SS_PTM_01 : FB_PTM_TurboDrive; 
 
(*Pirani MKS 275 Gauges*)
    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[MRCO_PNL1_EP05_EP3174-0002]^AI Standard Channel 1^Value
    '}
    {attribute 'pytmc' := '
        pv: MRCO:MAIN:GPI:01
        io: io
    '}
    MRCO_MAIN_GPI_01 : FB_MKS275;


(*MicroPirani MKS 925 Gauges*)
    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[MRCO_PNL1_EP04_EP3174-0002]^AI Standard Channel 1^Value
    '}
    {attribute 'pytmc' := '
        pv: MRCO:ROUGH:GPI:01
        io: io
    '}
    MRCO_ROUGH_GPI_01 : FB_9XX;

    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[MRCO_PNL1_EP04_EP3174-0002]^AI Standard Channel 2^Value
    '}
    {attribute 'pytmc' := '
        pv: MRCO:ROUGH:GPI:02
        io: io
    '}
    MRCO_ROUGH_GPI_02 : FB_9XX;

    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[MRCO_PNL1_EP04_EP3174-0002]^AI Standard Channel 3^Value
    '}
    {attribute 'pytmc' := '
        pv: MRCO:ROUGH:GPI:03
        io: io
    '}
    MRCO_ROUGH_GPI_03 : FB_9XX;
    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[MRCO_PNL1_EP04_EP3174-0002]^AI Standard Channel 4^Value
    '}
    {attribute 'pytmc' := '
        pv: MRCO:ROUGH:GPI:04
        io: io
    '}
    MRCO_ROUGH_GPI_04 : FB_9XX;
// adding ss chambner GPI-05	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[MRCO_PNL1_EP04_EP3174-0002]^AI Standard Channel 4^Value
    '}
    {attribute 'pytmc' := '
        pv: MRCO:ROUGH:GPI:05
        io: io
    '}
//    MRCO_ROUGH_GPI_05 : FB_9XX;

(*Hot Cathode MKS 909 Gauges*)
    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[MRCO_PNL1_EP05_EP3174-0002]^AI Standard Channel 2^Value;
                                 .q_xHV_DIS		:= 	TIIB[MRCO_PNL1_EP06_EP2624-0002]^Channel 2^Output
    '}
    {attribute 'pytmc' := '
        pv: MRCO:MAIN:GHC:01
        io: io
    '}
    MRCO_MAIN_GHC_01 : FB_MKS909;

//adding ss chamber GHC HORNET
    {attribute 'TcLinkTo' := 	'    .i_iPRESS_R		:=	TIIB[K4S8_DRL_04_E16_EL3174-0002]^AI Standard Channel 2^Value;
                                     .i_xHV_ON			:=	TIIB[K4S8_DRL_04_E15_EL1084]^Channel 1^Input;
                                     .q_xHV_DIS			:=	TIIB[K4S8_DRL_04_E14_EL2624]^Channel 1^Output
    '}
    {attribute 'pytmc' :=' pv: MRCO:SS:GHC:01'}
 //  MRCO_SS_GHC_01 : FB_IMG401;	

(*Variable Leak Valve*)
    {attribute 'TcLinkTo' := 	'.i_nRawPosition	:=	TIIB[VCN_1_VAT590]^DI TxPDO-Map^Position;
                                 .i_nRawPressure	:=	TIIB[VCN_1_VAT590]^DI TxPDO-Map^Pressure;
                                 .i_eControlMode	:=	TIIB[VCN_1_VAT590]^DI TxPDO-Map^Control mode;
                                 .i_eFatalError		:=	TIIB[VCN_1_VAT590]^DI TxPDO-Map^Fatal error;
                                 .i_stGenStatus 	:=	TIIB[VCN_1_VAT590]^DI TxPDO-Map^General status;
                                 .i_stGenWarnings 	:=	TIIB[VCN_1_VAT590]^DI TxPDO-Map^General warnings;
                                 .i_stExtnWarnings 	:=	TIIB[VCN_1_VAT590]^DI TxPDO-Map^Extended warnings;
                                 .o_nRawPositionSP 	:=	TIIB[VCN_1_VAT590]^DO RxPDO-Map^Position setpoint;
                                 .o_nRawPressureSP 	:=	TIIB[VCN_1_VAT590]^DO RxPDO-Map^Pressure setpoint;
                                 .o_nRawPressure 	:=	TIIB[VCN_1_VAT590]^DO RxPDO-Map^External digital pressure sensor 1;
                                 .o_eCtrlModeSP 	:=	TIIB[VCN_1_VAT590]^DO RxPDO-Map^Control mode setpoint;
                                 .o_stGenCtrlSP 	:=	TIIB[VCN_1_VAT590]^DO RxPDO-Map^General control setpoint;
                                 .i_stVat590PlcDriveRef.aNetId     := TIIB[VCN_1_VAT590]^InfoData^AdsAddr^netId;
                                 .i_stVat590PlcDriveRef.nSlaveAddr := TIIB[VCN_1_VAT590]^InfoData^AdsAddr^port;
                                 .i_bValveEthCatStatus             := TIIB[VCN_1_VAT590]^WcState^WcState
    '}
    {attribute 'pytmc' := 'pv: MRCO:VCN:01'}
    MRCO_VCN_01 : FB_VCN_VAT590;

(*Normally Closed Valve with Readback*)//ALL VALVES CURRENTLY NO
    {attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[MRCO_PNL1_EP07_EP2338-0002]^Channel 1^Input;
                                 .i_xClsLS	:=	TIIB[MRCO_PNL1_EP07_EP2338-0002]^Channel 2^Input;
                                 .q_xOPN_DO	:=	TIIB[MRCO_PNL1_EP07_EP2338-0002]^Channel 11^Output
    '}
    {attribute 'pytmc' := '
        pv: MRCO:ROUGH:VRC:01
        io: io
    '}
    MRCO_ROUGH_VRC_01 : FB_VRC;

    {attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[MRCO_PNL1_EP08_EP2338-0002]^Channel 1^Input;
                                 .i_xClsLS	:=	TIIB[MRCO_PNL1_EP08_EP2338-0002]^Channel 2^Input;
                                 .q_xOPN_DO	:=	TIIB[MRCO_PNL1_EP08_EP2338-0002]^Channel 11^Output
    '}
    {attribute 'pytmc' := '
        pv: MRCO:ROUGH:VRC:03
        io: io
    '}
    MRCO_ROUGH_VRC_03 : FB_VRC;

    (*Normally Open Valve with Readback*)

    {attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[MRCO_PNL1_EP07_EP2338-0002]^Channel 5^Input;
                                 .i_xClsLS	:=	TIIB[MRCO_PNL1_EP07_EP2338-0002]^Channel 6^Input;
                                 .q_xCLS_DO	:=	TIIB[MRCO_PNL1_EP07_EP2338-0002]^Channel 15^Output
    '}
    {attribute 'pytmc' := '
        pv: MRCO:ROUGH:VRC:02
        io: io
    '}
    MRCO_ROUGH_VRC_02 : FB_VRC_NO;
	
	//adding a window valve between MRCO main chamber to SS chamber
	{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[MRCO_PNL1_EP08_EP2338-0002]^Channel 1^Input;
                                 .i_xClsLS	:=	TIIB[MRCO_PNL1_EP08_EP2338-0002]^Channel 2^Input;
                                 .q_xOPN_DO	:=	TIIB[MRCO_PNL1_EP08_EP2338-0002]^Channel 11^Output
    '}
    {attribute 'pytmc' := '
        pv: MRCO:SS:VRC:01
        io: io
    '}
//    MRCO_SS_VRC_01 : FB_VGC; 

//adding rough line valve in SS chamber
	{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[MRCO_PNL1_EP08_EP2338-0002]^Channel 1^Input;
                                 .i_xClsLS	:=	TIIB[MRCO_PNL1_EP08_EP2338-0002]^Channel 2^Input;
                                 .q_xOPN_DO	:=	TIIB[MRCO_PNL1_EP08_EP2338-0002]^Channel 11^Output
    '}
    {attribute 'pytmc' := '
        pv: MRCO:ROUGH:VRC:04
        io: io
    '}
//    MRCO_ROUGH_VRC_04 : FB_VRC; 

//adding NO valve VRC-05 in ss chamber
   {attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[MRCO_PNL1_EP07_EP2338-0002]^Channel 5^Input;
                                 .i_xClsLS	:=	TIIB[MRCO_PNL1_EP07_EP2338-0002]^Channel 6^Input;
                                 .q_xCLS_DO	:=	TIIB[MRCO_PNL1_EP07_EP2338-0002]^Channel 15^Output
    '}
    {attribute 'pytmc' := '
        pv: MRCO:ROUGH:VRC:05
        io: io
    '}
//    MRCO_ROUGH_VRC_05 : FB_VRC_NO;



(*Pfeiffer*)
    // They share the same serial port
    st_Pfeiffer_CTRL_MRCO_ROUGH_PTM_01   		: ARRAY[1..20] OF ST_PfeifferControl;
    st_Pfeiffer_RBK_MRCO_ROUGH_PTM_01 			: ARRAY[1..20] OF ST_PfeifferStatus;
    fb_PfeifferCom_MRCO_ROUGH_PTM_01 			: FB_PFEIFFER_COM;

(*Leybold*)
    st_TD20_RBK_MRCO_MAIN_PTM_01                : ST_TD20Status;
    fb_TD20Com_MRCO_MAIN_PTM_01                 : FB_OERLIKON_TD20_COM;

    st_TD20_RBK_MRCO_MAIN_PTM_02                : ST_TD20Status;
    fb_TD20Com_MRCO_MAIN_PTM_02                 : FB_OERLIKON_TD20_COM;

    st_TD20_RBK_MRCO_MAIN_PTM_03                : ST_TD20Status;
    fb_TD20Com_MRCO_MAIN_PTM_03                 : FB_OERLIKON_TD20_COM;

    st_TD20_RBK_MRCO_MAIN_PTM_04                : ST_TD20Status;
    fb_TD20Com_MRCO_MAIN_PTM_04                 : FB_OERLIKON_TD20_COM;
	
//	st_TD20_RBK_MRCO_SS_PTM_01                : ST_TD20Status;
//    fb_TD20Com_MRCO_SS_PTM_01                 : FB_OERLIKON_TD20_COM;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>