<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="MAIN" Id="{002ad0c3-72fa-47bb-80c4-f9448f2d52a7}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
    fbLogHandler : FB_LogHandler;

    //TMO Interface
    xEcatBridge_COM_ERROR : BOOL;
    b_TurboPumpRunningFlag : BOOL;
    b_SS_PTM_01_ILKOK : BOOL := FALSE;
    TurboPumpTOF : TOF;
    TurboPumpDelayTime : TIME := T#30s;

    fbGetCurTaskIndex : GETCURTASKINDEX;

    F_Turbo_TESTY: BOOL;

   dummy_FFFO : FB_HardwareFFOutput;
   dummy_fbArbiter1    :   FB_Arbiter(1);
   r_DPPRESS_SP  : REAL := 10;
   i_stTurbo : ST_PTM;



END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[r_DPPRESS_SP := ABS(MRCO_ROUGH_GPI_02.PG.rPRESS - MRCO_ROUGH_GPI_04.PG.rPRESS)*2 /(MRCO_ROUGH_GPI_02.PG.rPRESS + MRCO_ROUGH_GPI_04.PG.rPRESS);
// remove TMO_ROUGH2_VRC_01_OPEN_LS for all MRCO turbo pump conditions
IF (xOnBeamline) THEN
    F_Turbo_TESTY := (MRCO_MAIN_GPI_01.PG.xPRESS_OK AND MRCO_MAIN_GPI_01.PG.rPRESS < MRCO_ROUGH_PTM_01.iq_stPtm.rInletPressureSP) AND
                                    (MRCO_ROUGH_GPI_02.PG.xPRESS_OK AND MRCO_ROUGH_GPI_02.PG.rPRESS < MRCO_ROUGH_PTM_01.iq_stPtm.rBackingPressureSP) AND
                                 ((MRCO_ROUGH_VRC_01.iq_stValve.i_xOpnLS) OR
                                 (MRCO_ROUGH_VRC_02.iq_stValve.i_xOpnLS AND (MRCO_ROUGH_VRC_03.iq_stValve.i_xOpnLS AND
                                 xTMO_ROUGH1_VRC_01_OPEN_LS)))AND (NOT xEcatBridge_COM_ERROR);
ELSE
    F_Turbo_TESTY := (MRCO_MAIN_GPI_01.PG.xPRESS_OK AND MRCO_MAIN_GPI_01.PG.rPRESS < MRCO_ROUGH_PTM_01.iq_stPtm.rInletPressureSP) AND
                                    (MRCO_ROUGH_GPI_02.PG.xPRESS_OK AND MRCO_ROUGH_GPI_02.PG.rPRESS < MRCO_ROUGH_PTM_01.iq_stPtm.rBackingPressureSP) AND
                                 (MRCO_ROUGH_VRC_01.iq_stValve.i_xOpnLS OR MRCO_ROUGH_VRC_02.iq_stValve.i_xOpnLS OR MRCO_ROUGH_VRC_03.iq_stValve.i_xOpnLS);
END_IF

///
fbLogHandler();
// Run the Diagnostics PRG
DIAGNOSTICS();

(*EtherCAT Bridge Status*)
//xEcatBridge_COM_ERROR := TRUE means that there is an EtherCAT Bridge Communication error.
xEcatBridge_COM_ERROR := (xEcatBridge_TxPDO_state OR xEcatBridge_External_device_not_connected OR xEcatBridge_WcState);

xOnBeamline := (xEcatBridge_COM_ERROR = FALSE) AND (sHUTCH_PLC_NAME = 'TMO');

(*TurboPump running Flag with 30 second Turn Off delay.*)
b_TurboPumpRunningFlag :=
    (MRCO_MAIN_PTM_01.iq_stPtm.eState = E_PumpState.pumpRUNNING)  AND
    (MRCO_MAIN_PTM_02.iq_stPtm.eState = E_PumpState.pumpRUNNING) AND
    (MRCO_MAIN_PTM_03.iq_stPtm.eState = E_PumpState.pumpRUNNING) AND
    (MRCO_MAIN_PTM_04.iq_stPtm.eState = E_PumpState.pumpRUNNING) AND
    (MRCO_ROUGH_PTM_01.iq_stPtm.eState = E_PumpState.pumpRUNNING) AND
    (MRCO_MSC_PTM_01.iq_stPtm.estate = E_PumpState.pumpRUNNING);
   // (MRCO_SS_PTM_01.iq_stPtm.estate = E_PumpState.pumpRUNNING);
TurboPumpTOF(IN:= b_TurboPumpRunningFlag, PT := TurboPumpDelayTime);
xIP1_TURBOS_ALL_AtSpd:= TurboPumpTOF.Q;
(*High Voltage Saftey Loop*)// rHighVoltageMinPressure = 1e-05; (*Hard coded High voltage Minimum Enable Pressure*)
xHighVoltageSafteyLoopEnable:= (MRCO_MAIN_GHC_01.IG.rPRESS <= rHighVoltageMinPressure) AND (MRCO_MAIN_GHC_01.IG.xPRESS_OK = TRUE);

(*PIRANI Gauges*)
    MRCO_MAIN_GPI_01.M_SetBits(32767);
    MRCO_MAIN_GPI_01(PG=>);

(*uPIRANI Gauges*)
    MRCO_ROUGH_GPI_01.M_SetBits(32767);
    MRCO_ROUGH_GPI_01(PG=>);
    MRCO_ROUGH_GPI_02.M_SetBits(32767);
    MRCO_ROUGH_GPI_02(PG=>);
    MRCO_ROUGH_GPI_03.M_SetBits(32767);
    MRCO_ROUGH_GPI_03(PG=>);
    MRCO_ROUGH_GPI_04.M_SetBits(32767);
    MRCO_ROUGH_GPI_04(PG=>);
    MRCO_ROUGH_GPI_05.M_SetBits(30518);
    MRCO_ROUGH_GPI_05(PG=>);

(*Cold Cathode Gauges*)

(*Hot Cathode Gauges*)
    MRCO_MAIN_GHC_01.M_SetBits(32767);
    MRCO_MAIN_GHC_01(PG:=MRCO_MAIN_GPI_01.PG,IG=>);
 //   MRCO_SS_GHC_01.M_SetBits(30518);
  //  MRCO_SS_GHC_01(PG:=MRCO_ROUGH_GPI_05.PG,IG=>);

    MRCO_MSC_GHC_01.M_SetBits(30518);
    MRCO_MSC_GHC_01(PG:=MRCO_ROUGH_GPI_05.PG,IG=>);


(*Variable Leak Valve*)
    MRCO_VCN_01(bExtIlkOK:= TRUE, IG := MRCO_MAIN_GHC_01.IG);

(*TURBO Pumps
*In general, if turbo pump setpoints are above the pirani guage readings or there is no downstream open path to a roughing pump, the turbo pump will close.
*
*)
// all pumps remove contigency of VRC02 as James request on 10-14-24
    MRCO_MAIN_PTM_01(i_xExtILKOk:= F_Turbo_NC_NO_Valve_Logic(
                        i_stTurbo:= MRCO_MAIN_PTM_01.iq_stPtm,
                        i_stISG:= MRCO_MAIN_GPI_01.PG,
                        i_stBSG:= MRCO_ROUGH_GPI_02.PG,
               (*        iq_stValve_NO:= MRCO_ROUGH_VRC_02.iq_stValve, *)
                        iq_stValve_NC:= MRCO_ROUGH_VRC_01.iq_stValve,
                        iq_stValve_NC_second:= MRCO_ROUGH_VRC_03.iq_stValve,
                        EcatBridge_Error_Present:= xEcatBridge_COM_ERROR,
                        iq_stRoughRoughValve_NC_xOpnLS:= TRUE, (* xTMO_ROUGH2_VRC_01_OPEN_LS, *)//request by James 02-2025: Set it TRUE to remove tmo_rough2_vrc_01 contigency for all pumps in MRCO
                        iq_stRoughRoughValve_NC_second_xOpenLS:=xTMO_ROUGH1_VRC_01_OPEN_LS,
                        x_onBeamline:= xOnBeamline),
                    iq_stPtm=> );

    MRCO_MAIN_PTM_02(i_xExtILKOk:= F_Turbo_NC_NO_Valve_Logic(
                        i_stTurbo:= MRCO_MAIN_PTM_02.iq_stPtm,
                        i_stISG:= MRCO_MAIN_GPI_01.PG,
                        i_stBSG:= MRCO_ROUGH_GPI_02.PG,
                      (*  iq_stValve_NO:= MRCO_ROUGH_VRC_02.iq_stValve, *)
                        iq_stValve_NC:= MRCO_ROUGH_VRC_01.iq_stValve,
                        iq_stValve_NC_second:= MRCO_ROUGH_VRC_03.iq_stValve,
                        EcatBridge_Error_Present:= xEcatBridge_COM_ERROR,
                        iq_stRoughRoughValve_NC_xOpnLS:= TRUE, (*xTMO_ROUGH2_VRC_01_OPEN_LS, *) //request by James 02-2025: Set it TRUE to remove tmo_rough2_vrc_01 contigency for all pumps in MRCO
                        iq_stRoughRoughValve_NC_second_xOpenLS:=xTMO_ROUGH1_VRC_01_OPEN_LS,
                        x_onBeamline:= xOnBeamline),
                    iq_stPtm=> );

    MRCO_MAIN_PTM_03(i_xExtILKOk:= F_Turbo_NC_NO_Valve_Logic(
                        i_stTurbo:= MRCO_MAIN_PTM_03.iq_stPtm,
                        i_stISG:= MRCO_MAIN_GPI_01.PG,
                        i_stBSG:= MRCO_ROUGH_GPI_02.PG,
                     (*   iq_stValve_NO:= MRCO_ROUGH_VRC_02.iq_stValve, *)
                        iq_stValve_NC:= MRCO_ROUGH_VRC_01.iq_stValve,
                        iq_stValve_NC_second:= MRCO_ROUGH_VRC_03.iq_stValve,
                        EcatBridge_Error_Present:= xEcatBridge_COM_ERROR,
                        iq_stRoughRoughValve_NC_xOpnLS:= TRUE, (*xTMO_ROUGH2_VRC_01_OPEN_LS, *) //request by James 02-2025: Set it TRUE to remove tmo_rough2_vrc_01 contigency for all pumps in MRCO
                        iq_stRoughRoughValve_NC_second_xOpenLS:=xTMO_ROUGH1_VRC_01_OPEN_LS,
                        x_onBeamline:= xOnBeamline),
                    iq_stPtm=> );

    MRCO_MAIN_PTM_04(i_xExtILKOk:= F_Turbo_NC_NO_Valve_Logic(
                        i_stTurbo:= MRCO_MAIN_PTM_04.iq_stPtm,
                        i_stISG:= MRCO_MAIN_GPI_01.PG,
                        i_stBSG:= MRCO_ROUGH_GPI_02.PG,
                      (*  iq_stValve_NO:= MRCO_ROUGH_VRC_02.iq_stValve, *)
                        iq_stValve_NC:= MRCO_ROUGH_VRC_01.iq_stValve,
                        iq_stValve_NC_second:= MRCO_ROUGH_VRC_03.iq_stValve,
                        EcatBridge_Error_Present:= xEcatBridge_COM_ERROR,
                        iq_stRoughRoughValve_NC_xOpnLS:= TRUE, (*xTMO_ROUGH2_VRC_01_OPEN_LS, *)//request by James 02-2025: Set it TRUE to remove tmo_rough2_vrc_01 contigency for all pumps in MRCO
                        iq_stRoughRoughValve_NC_second_xOpenLS:=xTMO_ROUGH1_VRC_01_OPEN_LS,
                        x_onBeamline:= xOnBeamline),
                    iq_stPtm=> );

    MRCO_ROUGH_PTM_01(i_xExtILKOk:= F_Turbo_NC_NO_Valve_Logic(
                        i_stTurbo:= MRCO_ROUGH_PTM_01.iq_stPtm,
                        i_stISG:= MRCO_MAIN_GPI_01.PG,
                        i_stBSG:= MRCO_ROUGH_GPI_02.PG,
                    (*   iq_stValve_NO:= MRCO_ROUGH_VRC_02.iq_stValve, *)
                        iq_stValve_NC:= MRCO_ROUGH_VRC_01.iq_stValve,
                        iq_stValve_NC_second:= MRCO_ROUGH_VRC_03.iq_stValve,
                        EcatBridge_Error_Present:= xEcatBridge_COM_ERROR,
                        iq_stRoughRoughValve_NC_xOpnLS:= TRUE, (*xTMO_ROUGH2_VRC_01_OPEN_LS, *)//request by James 02-2025: Set it TRUE to remove tmo_rough2_vrc_01 contigency for all pumps in MRCO
                        iq_stRoughRoughValve_NC_second_xOpenLS:=xTMO_ROUGH1_VRC_01_OPEN_LS,
                        x_onBeamline:= xOnBeamline),
                    iq_stPtm=> );

         MRCO_MSC_PTM_01(i_xExtILKOk:=b_SS_PTM_01_ILKOK );

IF (xOnBeamline) THEN
    b_SS_PTM_01_ILKOK := (MRCO_ROUGH_GPI_05.PG.xPRESS_OK AND MRCO_ROUGH_GPI_05.PG.rPRESS < i_stTurbo.rBackingPressureSP) AND
                                 ((MRCO_ROUGH_VRC_01.i_xOpnLS AND xTMO_ROUGH1_VRC_01_OPEN_LS AND MRCO_ROUGH_VRC_05.i_xOpnLS) OR
                                 (MRCO_ROUGH_VRC_04.i_xOpnLS AND MRCO_ROUGH_VRC_03.i_xOpnLS AND xTMO_ROUGH2_VRC_01_OPEN_LS) OR
                                 (MRCO_ROUGH_VRC_02.i_xOpnLS AND MRCO_ROUGH_VRC_04.i_xOpnLS AND xTMO_ROUGH1_VRC_01_OPEN_LS)
                                  AND (NOT xEcatBridge_COM_ERROR));
ELSE
   b_SS_PTM_01_ILKOK := (MRCO_ROUGH_GPI_05.PG.xPRESS_OK AND MRCO_ROUGH_GPI_05.PG.rPRESS < i_stTurbo.rBackingPressureSP) AND
                                 ((MRCO_ROUGH_VRC_01.i_xOpnLS  AND MRCO_ROUGH_VRC_05.i_xOpnLS) OR
                                 (MRCO_ROUGH_VRC_04.i_xOpnLS AND MRCO_ROUGH_VRC_03.i_xOpnLS ) OR
                                 (MRCO_ROUGH_VRC_02.i_xOpnLS AND MRCO_ROUGH_VRC_04.i_xOpnLS ));

END_IF




(*Serial Communication*)
(*Assign adresses to the pfeiffer controllers connected to this serial terminal*)
st_Pfeiffer_CTRL_MRCO_ROUGH_PTM_01[1].iSerialAddress :=1;
st_Pfeiffer_CTRL_MRCO_ROUGH_PTM_01[1].xEnableComm := TRUE;
(* Instanitate the Function block for serial communication with Pfeiffer*)
fb_PfeifferCom_MRCO_ROUGH_PTM_01(astPfeifferControl := st_Pfeiffer_CTRL_MRCO_ROUGH_PTM_01,
                                 astPfeifferStatus:= st_Pfeiffer_RBK_MRCO_ROUGH_PTM_01,
                              SerialRXBuffer:= SerialRXBuffer_MRCO_ROUGH_PTM_01,
                              SerialTXBuffer:= SerialTXBuffer_MRCO_ROUGH_PTM_01);
(* Copy Status Pv's into the PTM structure*)
MRCO_ROUGH_PTM_01.M_Serial_IO(st_Pfeiffer_RBK:= st_Pfeiffer_RBK_MRCO_ROUGH_PTM_01[1], st_Pfeiffer_CTRL:= st_Pfeiffer_CTRL_MRCO_ROUGH_PTM_01[1]);

//Leybolds
fb_TD20Com_MRCO_MAIN_PTM_01(SerialRXBuffer:= SerialRXBuffer_MRCO_MAIN_PTM_01,
                                                    SerialTXBuffer:= SerialTXBuffer_MRCO_MAIN_PTM_01,
                                                    astTD20Status=> st_TD20_RBK_MRCO_MAIN_PTM_01);
MRCO_MAIN_PTM_01.M_Serial_IO(i_st_TD20_RBK:= st_TD20_RBK_MRCO_MAIN_PTM_01);

fb_TD20Com_MRCO_MAIN_PTM_02(SerialRXBuffer:= SerialRXBuffer_MRCO_MAIN_PTM_02,
                                                    SerialTXBuffer:= SerialTXBuffer_MRCO_MAIN_PTM_02,
                                                    astTD20Status=> st_TD20_RBK_MRCO_MAIN_PTM_02);
MRCO_MAIN_PTM_02.M_Serial_IO(i_st_TD20_RBK:= st_TD20_RBK_MRCO_MAIN_PTM_02);

fb_TD20Com_MRCO_MAIN_PTM_03(SerialRXBuffer:= SerialRXBuffer_MRCO_MAIN_PTM_03,
                                                    SerialTXBuffer:= SerialTXBuffer_MRCO_MAIN_PTM_03,
                                                    astTD20Status=> st_TD20_RBK_MRCO_MAIN_PTM_03);
MRCO_MAIN_PTM_03.M_Serial_IO(i_st_TD20_RBK:= st_TD20_RBK_MRCO_MAIN_PTM_03);

fb_TD20Com_MRCO_MAIN_PTM_04(SerialRXBuffer:= SerialRXBuffer_MRCO_MAIN_PTM_04,
                                                    SerialTXBuffer:= SerialTXBuffer_MRCO_MAIN_PTM_04,
                                                    astTD20Status=> st_TD20_RBK_MRCO_MAIN_PTM_04);
MRCO_MAIN_PTM_04.M_Serial_IO(i_st_TD20_RBK:= st_TD20_RBK_MRCO_MAIN_PTM_04);



fb_TD400SerialIO_MRCO_MSC_PTM_01(iq_stPTM := MRCO_MSC_PTM_01.iq_stPtm,
                                    iq_stTD400Control := st_TD400_CTRL_MRCO_MSC_PTM_01,
                                    iq_stTD400Status := st_TD400_RBK_MRCO_MSC_PTM_01);
fb_TD400Com_MRCO_MSC_PTM_01(SerialRXBuffer := SerialRXBuffer_MRCO_MSC_PTM_01,
                               SerialTXBuffer := SerialTXBuffer_MRCO_MSC_PTM_01,
                               stTD400Control := st_TD400_CTRL_MRCO_MSC_PTM_01,
                               stTD400Status => st_TD400_RBK_MRCO_MSC_PTM_01);


(*Vacuum Gate Valve*)
    fbGetCurTaskIndex();//getting index for first cycle of PLC operation

    //VRC-Normally Closed: VRC-01
    //If OnBeamline then stay open.
    IF(xOnBeamline) THEN
        MRCO_ROUGH_VRC_01.M_Set_OPN_SW(TRUE);
        MRCO_ROUGH_VRC_01(
        i_xExtILK_OK:= TRUE,
        i_xOverrideMode:= xSystemOverrideMode_MRCO,
        iq_stValve=> );
    ELSE
        //MRCO:ROUGH:VRC:01 can open when the pressure across the valve is below 150 torr
        MRCO_ROUGH_VRC_01(
        i_xExtILK_OK:= (ABS(MRCO_ROUGH_GPI_01.PG.rPRESS - MRCO_ROUGH_GPI_02.PG.rPRESS)<150.0),
        i_xOverrideMode:= xSystemOverrideMode_MRCO,
        iq_stValve=> );
    END_IF


    //Normally Open Bypass Valve: VRC-02, is interlocked with VRC-06 where only one can be open at a time

    IF (xOnBeamline AND MRCO_ROUGH_VRC_06.iq_stValve.i_xOpnLS) THEN
        MRCO_ROUGH_VRC_02.M_Set_CLS_SW(TRUE);
    END_IF

    MRCO_ROUGH_VRC_02(
    i_xExtILK_OK:= True,
    i_xOverrideMode:= xSystemOverrideMode_MRCO,
    iq_stValve=> );

    //Normally Open Bypass Valve : VRC_05 interlock with VRC_04

    IF (xOnBeamline AND MRCO_ROUGH_VRC_04.iq_stValve.i_xOpnLS) THEN
        MRCO_ROUGH_VRC_05.M_Set_CLS_SW(TRUE);
    END_IF

    MRCO_ROUGH_VRC_05(
    i_xExtILK_OK:= TRUE,
    i_xOverrideMode:= xSystemOverrideMode_MRCO,
    iq_stValve=> );

    //Normally Closed valve

    MRCO_ROUGH_VRC_06(
    i_xExtILK_OK:= MRCO_ROUGH_VRC_02.iq_stValve.i_xClsLS AND MRCO_ROUGH_VRC_04.iq_stValve.i_xClsLS,
    i_xOverrideMode:= xSystemOverrideMode_MRCO,
    iq_stValve=> );


    //VRC-Normally Closed:VRC_03
    //If OnBeamline then stay open.
    IF(xOnBeamline) THEN
        MRCO_ROUGH_VRC_03.M_Set_OPN_SW(TRUE);
        MRCO_ROUGH_VRC_03(
        i_xExtILK_OK:= TRUE,
        i_xOverrideMode:= xSystemOverrideMode_MRCO,
        iq_stValve=> );
    ELSE
        MRCO_ROUGH_VRC_03(//MRCO:ROUGH:VRC:03 can open when the pressure across the valve is below 1000 torr when it is not on beamline
        i_xExtILK_OK:= (ABS(MRCO_ROUGH_GPI_03.PG.rPRESS - MRCO_ROUGH_GPI_04.PG.rPRESS)<1000.0),
        i_xOverrideMode:= xSystemOverrideMode_MRCO,
        iq_stValve=> );
    END_IF

//VRC-Normally Closed, interlock with VRC_05

 MRCO_ROUGH_VRC_04(
                i_stUSG := MRCO_ROUGH_GPI_04.PG,
                i_stDSG:= MRCO_ROUGH_GPI_05.PG,
                i_xDis_DPIlk := FALSE,
                i_xEPS_OK := TRUE,
                i_xPMPS_OK := TRUE ,
                i_xExt_OK := MRCO_ROUGH_VRC_05.iq_stValve.i_xClsLS and MRCO_ROUGH_VRC_06.iq_stValve.i_xClsLS,
                i_xOverrideMode := xSystemOverrideMode_MRCO,
                i_xReset := False,
                io_fbFFHWO :=dummy_FFFO,
                fbArbiter := dummy_fbArbiter1);



 MRCO_MSC_VRC_01(
                i_stUSG := MRCO_MAIN_GHC_01.IG,
                i_stDSG:= MRCO_MSC_GHC_01.IG,
                i_xDis_DPIlk := FALSE,
                i_xEPS_OK := TRUE,
                i_xPMPS_OK := TRUE ,
                i_xExt_OK := TRUE,
                i_xOverrideMode := xSystemOverrideMode_MRCO,
                i_xReset := False,
                io_fbFFHWO :=dummy_FFFO,
                fbArbiter := dummy_fbArbiter1);




(*Update EtherCAT Bridge Outputs*)

xIP1_ROUGH_VRC_01_OPEN_LS 	:=	MRCO_ROUGH_VRC_01.M_IsOpen();
xIP1_ROUGH_VRC_02_OPEN_LS	:=	MRCO_ROUGH_VRC_02.M_IsOpen();
xIP1_ROUGH_VRC_03_OPEN_LS 	:= 	MRCO_ROUGH_VRC_03.M_IsOpen();
//xIP1_TURBO_FAULT AT %Q* : BOOL; already updated at turbo pump logic.
(*
xIP1_MAIN_xAT_VAC 			:= 	MRCO_MAIN_GHC_01.IG.xAT_VAC;
xIP1_MAIN_xPRESS_OK 		:= 	MRCO_MAIN_GHC_01.IG.xPRESS_OK;
rIP1_MAIN_rPRESS 			:= 	MRCO_MAIN_GHC_01.IG.rPRESS;
*)
//how to pass to IP1_MAIN_rPRESS


IF  (MRCO_MAIN_GHC_01.IG.xPRESS_OK AND MRCO_MSC_GHC_01.IG.xPRESS_OK) THEN
    IF (MRCO_MAIN_GHC_01.IG.i_iPRESS_R > MRCO_MSC_GHC_01.IG.i_iPRESS_R) THEN
        rIP1_MAIN_rPRESS := MRCO_MSC_GHC_01.IG.rPRESS;
        xIP1_MAIN_xPRESS_OK := MRCO_MSC_GHC_01.IG.xPRESS_OK;
        xIP1_MAIN_xAT_VAC 	:= MRCO_MSC_GHC_01.IG.xAT_VAC;
    ELSE
         rIP1_MAIN_rPRESS  := MRCO_MAIN_GHC_01.IG.rPRESS;
         xIP1_MAIN_xPRESS_OK := MRCO_MAIN_GHC_01.IG.xPRESS_OK;
        xIP1_MAIN_xAT_VAC 	:= MRCO_MAIN_GHC_01.IG.xAT_VAC;
    END_IF
ELSE
    xIP1_MAIN_xAT_VAC := FALSE;
    xIP1_MAIN_xPRESS_OK := FALSE;
    rIP1_MAIN_rPRESS 	:= 0;
END_IF







xIP1_HV_SAFETY_ENABLE		:=	xHighVoltageSafteyLoopEnable;

(*Update Thermocouple Readings*)
PRG_TC();
    ]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>